fix start writing button text wrap on Safari

--- a/components/DiaryFilesHome/DiaryFilesHome.module.scss
+++ b/components/DiaryFilesHome/DiaryFilesHome.module.scss
@@ -40,6 +40,7 @@
 .mastheadButton {
   max-width: 20em;
   margin: 0 auto var(--spacing-lg);
+  letter-spacing: 0.3em;
 }
 
 .divider {
